--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>haloo dek 2</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, omnis aspernatur? Modi aperiam, eum nihil architecto quidem perspiciatis facere soluta incidunt ratione tempore, magni dicta eveniet ipsa veniam consequuntur, minus quibusdam amet. Perspiciatis animi eius ea quam ducimus eum accusamus architecto, incidunt aperiam dolore quidem aspernatur sit officiis tempore. Vero facere, sint impedit dicta ratione aliquid illum molestiae unde fugit est accusamus veritatis modi odit cum iure perferendis velit ad expedita ducimus molestias officiis quod. Dolores consequuntur necessitatibus eos assumenda voluptatibus illo veniam asperiores incidunt libero nisi possimus voluptatem sapiente ducimus nihil et, fuga ea aspernatur qui quas explicabo iste.</p>
+    <ul>
+        <li>satu</li>
+        <li>dua</li>
+    </ul>
 </body>
 </html>
